# tasktree

./: .gitignore  AGENTS.md  PROMPT.md  README.md  Taskfile.yml  flake.nix  pyproject.toml  ralph.sh  server.py  update_tests.py
.opencode/: opencode.jsonc
.opencode/agents/: taskmaster.md  treekeeper.md
.task/checksum/: create-db  seed-db
.tasktree/: .gitignore  tasktree.io.snapshot.jsonl  tasktree.snapshot.jsonl
data/: tasktree.db
docs/: api-reference.md  core-components.md  database-path-resolution.md  database-schema.md  jsonl-snapshot-format.md  project-structure.md  sql-heavy-architecture.md  test-suite-review.md  untyped-returns-inventory.md
scripts/: draw-graph.sh  graph-server.py  graph-viewer.html
scripts/graph-server/: graph.js  index.html
sql/schemas/: 001_tasks.sql  002_dependencies.sql  003_features.sql
sql/views/: 001_available_tasks.sql  003_graph_json.sql  006_unavailable_tasks.sql
src/mcp/: README.md  database.py  models.py  pyproject.toml  server.py  tools.py  (+1 more)
tests/: __init__.py  conftest.py  test_add_dependency.py  test_add_task.py  test_cli.py  test_complete_task.py  test_database.py  test_db_fixture.py  test_db_inline_migration.py  test_db_isolation.py  test_db_schema.py  test_delete_task.py  test_details_field.py  test_features_table.py  test_get_available_tasks.py  test_get_task.py  test_graph_dot_view.py  test_graph_integration.py  test_graph_json_view.py  test_graph_server.py  test_graph_server_assets.py  test_graph_viewer.py  test_jsonl_snapshot_format.py  test_list_dependencies.py  test_list_tasks.py  test_mcp_tools_schema.py  test_package_main.py  test_paths.py  test_remove_dependency.py  test_repository_with_fixture.py  test_response_models.py  test_session.py  test_session_integration.py  test_session_tools.py  test_snapshot.py  test_snapshot_docs.py  test_snapshot_sql_view.py  test_start_task.py  test_task_feature_fk.py  test_taskfile.py  (+3 more)
(+87 files in other folders)
