[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tasktree"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.14.4",
    "pydantic>=2.0.0",
    "ruff>=0.14.14",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pyyaml>=6.0.3",
]

[tool.hatch.build]
packages = ["src/tasktree"]

[tool.hatch.build.targets.wheel]
packages = ["src/tasktree"]
include = [
    "src/tasktree/sql/**",
    "src/tasktree/graph_assets/**",
    "src/tasktree/graph_viewer.html",
    "src/tasktree/mcp/README.md",
]
