[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tasktree"
version = "0.1.0"
description = "SQL-first task execution system with complex dependency tracking"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.14.4",
    "pydantic>=2.0.0",
    "ruff>=0.14.14",
    "typer>=0.21.1",
]

[project.scripts]
tasktree = "tasktree.cli.main:cli"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pyyaml>=6.0.3",
]

[tool.hatch.build]
packages = ["src/tasktree"]

[tool.hatch.build.targets.wheel]
packages = ["src/tasktree"]
include = [
    "src/tasktree/sql/**/*.sql",
    "src/tasktree/graph/assets/**/*",
    "src/tasktree/mcp/README.md",
]
